<resources>
    <string name="app_name" translatable="false">Weekly Food Chooser</string>
    <string name="action_settings">Settings</string>
    <string name="instructions">Choose a random menu for your week meals or add recipes to your database.</string>
    <string name="generate">CHOOSE FOOD</string>
    <string name="recipes">RECIPES</string>

    <string name="title_activity_recipes">Recipes</string>
    <string name="recipes_search">Search recipe</string>
    <string-array name="foods_array">
        <item>Parmesan Chicken</item>
        <item>Hamburger</item>
        <item>Pizza</item>
        <item>Hotdog</item>
    </string-array>

    <string name="title_activity_choosed">Chosen Foods</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title">RECIPE TITLE</string>
    <string name="choose_ingredient">Choose an ingredient from the list</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="recipe_instructions">INSTRUCTIONS</string>
    <string name="title_activity_recipe_form">Recipe</string>
    <string name="add_new_ingredient">Or add a new one</string>
    <string name="new_ingredient">New ingredient</string>

    <string name="ok_ingredient">Add ingredient</string>
    <string name="cancel">Cancel</string>
</resources>
