<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_ingredient"
        android:layout_margin="10dp"
        android:textColor="@color/colorAccent"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/backgroundLight"
        android:id="@+id/ing_spinner"> </Spinner>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_ingredient"
        android:textColor="@color/colorAccent"
        android:buttonTint="@color/backgroundLight"
        android:layout_margin="10dp"
        android:id="@+id/ing_check"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/new_ingredient"
        android:enabled="false"
        android:id="@+id/ing_edit"/>


</LinearLayout>