<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.situvieraunplan.weeklyfoodchooser.MainActivity"
    android:background="@color/backgroundDark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="@color/texts"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        android:id="@+id/Instructions"/>

    <LinearLayout
        android:layout_below="@id/Instructions"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/choose_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="12dp"
            android:text="@string/generate"
            android:textColor="@color/text_buttons"
            android:textStyle="bold"
            android:textSize="20sp"
            android:drawableTop="@drawable/ic_food"
            android:layout_marginEnd="10dp"
            android:paddingTop="20dp"/>

        <Button
            android:id="@+id/recipe_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="10dp"
            android:text="@string/recipes"
            android:textColor="@color/text_buttons"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginEnd="12dp"
            android:drawableTop="@drawable/ic_recipes"
            android:paddingTop="20dp"/>

    </LinearLayout>

</RelativeLayout>